tests/baselines/reference/interMixingModulesInterfaces1.errors.txt
interMixingModulesInterfaces1.ts(10,13): error TS2322: Type 'null' is not assignable to type 'B'.


==== interMixingModulesInterfaces1.ts (1 errors) ====
    namespace A {
    
        export interface B {
            name: string;
            value: number;
        }
    
        export namespace B {
            export function createB(): B {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'B'.
            }
        }
    }
    
    var x: A.B = A.B.createB();